<resources>
    <string name="app_name">Lesson 6</string>
    <string name="click">Click</string>
    <string name="hello_world">Hello World!</string>
    <string name="choose_yes_no">Choose yes or no</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="chose_yes">you clicked Yes</string>
    <string name="chose_no">you clicked No</string>
    <!-- Preference Titles -->
    <string name="app">App</string>
    <string name="user">User</string>

    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">Settings</string>
    <string name="up_button_clicked">Up button clicked</string>
    <string name="preference_checkbox_key">preference_checkbox_key</string>
    <string name="preference_switch_preference">preference_switch_preference</string>
    <string name="preference_dropdown_preference">preference_dropdown_preference</string>
    <string name="preference_list_preference">preference_list_preference</string>
    <string name="settings_fragment">settings_fragment</string>
</resources>
