<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app">

        <CheckBoxPreference
            android:summary="@string/app_name"
            app:key="@string/preference_checkbox_key"
            app:title="CheckBoxPreference" />

        <SwitchPreferenceCompat
            android:dependency="@string/preference_checkbox_key"
            app:key="@string/preference_switch_preference"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="SwitchPreference" />

        <DropDownPreference
            android:entryValues="@array/reply_values"
            app:entries="@array/reply_entries"
            app:key="@string/preference_dropdown_preference"
            app:title="DropdownPreference"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="@string/preference_list_preference"
            app:title="ListPreference"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
